<resources>
    <string name="app_name">Shield Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Loren Ipisum</string>
    <string name="nav_header_subtitle">lorenipsum@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about_us">About Us</string>
    <string name="description">An app about COVID - 19</string>
    <string name="home_second">Home Second</string>
    <string name="home">Home</string>
    <string name="learn_how_covid">Learn how COVID-19 is spread</string>
    <string name="how_does_it_spread">How does it spread?</string>
    <string name="symptoms">Symptoms</string>
    <string name="learn_covid_19_symptoms">"Learn COVID-19 symptoms"</string>
    <string name="prevention_and_treatment">Prevention and Treatment</string>
    <string name="learn_how_to_prevent">Learn how to prevent COVID-19</string>
    <string name="what_to_do">What to Do</string>
    <string name="learn_what_to_do">Learn what to do about COVID-19</string>
    <string name="news">News</string>
    <string name="stats">Stats</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</string>

    <string name="learn_more">Learn More</string>
    <string name="latest_update">Latest Update</string>
    <string name="nigeria_update">Nigeria Update</string>
    <string name="china">China……………………………</string>
    <string name="very_high">Very High</string>
    <string name="regional">Regional…………………………</string>
    <string name="low">Low</string>
    <string name="global">Global………………………………</string>
    <string name="high">High</string>
    <string name="shield_up">Shield Up</string>
    <string name="home_bg_corona_doctors">Corona Doctors</string>
    <string name="image_from_news">Image from news</string>
    <string name="image_for_card">Image for Card</string>
    <string name="family">Family</string>
    <string name="from_covid_19">From Covid - 19</string>
    <string name="red_arrow">Red arrow</string>
    <string name="and_your">and your</string>
    <string name="world">World</string>
    <string name="start_up_picture">Start up picture</string>
    <string name="protect_the">Protect the</string>
    <string name="global_statistics">Global Statistics</string>
    <string name="world_map">World Map</string>
    <string name="global_update">Global Update</string>
    <string name="global_update_map">global update map</string>
    <string name="global_update_map_bottom_arrow">global update map bottom arrow</string>
    <string name="global_update_graph_2">Global update graph 2</string>
    <string name="global_update_graph_bottom_arrow">Global update graph bottom arrow</string>
</resources>
