<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#EBEBEB"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewForCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/title"
            android:layout_alignBottom="@id/subtitle"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin_8dp"
            android:src="@drawable/card_chart"
            android:contentDescription="@string/image_for_card" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:padding="@dimen/margin_8dp"
            android:layout_toEndOf="@id/imageViewForCard"
            android:text="@string/how_does_it_spread"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_toEndOf="@id/imageViewForCard"
            android:text="@string/learn_how_covid"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@android:color/darker_gray"
            android:textStyle="normal" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
