<?xml version="1.0" encoding="utf-8"?> <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/home_fragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8dp"
            >

            <ImageView
                android:id="@+id/imageViewForCard1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/title1"
                android:layout_alignBottom="@id/subtitle1"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/margin_8dp"
                android:src="@drawable/card_chart"
                android:contentDescription="@string/image_for_card" />

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:padding="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard1"
                android:text="@string/how_does_it_spread"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title1"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard1"
                android:text="@string/learn_how_covid"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8dp">

            <ImageView
                android:id="@+id/imageViewForCard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/title2"
                android:layout_alignBottom="@id/subtitle2"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/margin_8dp"
                android:src="@drawable/card_symptoms"
                android:contentDescription="@string/image_for_card" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:padding="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard2"
                android:text="@string/symptoms"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard2"
                android:text="@string/learn_covid_19_symptoms"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8dp"
            >

            <ImageView
                android:id="@+id/imageViewForCard3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/title3"
                android:layout_alignBottom="@id/subtitle3"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/margin_8dp"
                android:src="@drawable/card_prevention"
                android:contentDescription="@string/image_for_card" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_8dp"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard3"
                android:padding="@dimen/margin_8dp"
                android:text="@string/prevention_and_treatment"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title3"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard3"
                android:text="@string/learn_how_to_prevent"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#EBEBEB"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8dp">

            <ImageView
                android:id="@+id/imageViewForCard4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/title4"
                android:layout_alignBottom="@id/subtitle4"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/margin_8dp"
                android:src="@drawable/card_what_to_do"
                android:contentDescription="@string/image_for_card" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:padding="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard4"
                android:text="@string/what_to_do"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title4"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_toEndOf="@id/imageViewForCard4"
                android:text="@string/learn_what_to_do"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
