<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#EBEBEB"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewForCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_8dp"
            android:src="@drawable/news_images1"
            android:contentDescription="@string/image_from_news" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="textStart"
            android:layout_margin="@dimen/margin_8dp"
            app:layout_constraintStart_toEndOf="@id/imageViewForCard"
            app:layout_constraintTop_toTopOf="@id/imageViewForCard"
            app:layout_constraintBottom_toBottomOf="@id/imageViewForCard"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dummy_text"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/dummyTextColor" />

        <TextView
            android:id="@+id/learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_margin="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:text="@string/learn_more"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:textColor="@color/colorBlack"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_below="@id/learn_more"
            app:layout_constraintStart_toStartOf="@id/learn_more"
            app:layout_constraintEnd_toEndOf="@id/learn_more"
            app:layout_constraintTop_toBottomOf="@id/learn_more"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:background="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>